update "About Lorry" page

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -6,10 +6,11 @@
 	<div class="page-header">
 		<div class="container">
 			<h1>{{title}}</h1>
+			<p class="lead">{% trans %}The Lorry project is a fan site for the video game Clonk.{% endtrans %}</p>
 		</div>
 	</div>
 	<div class="container">
-		<p class="lead">{% trans %}The Lorry project was created from three basic concepts:{% endtrans %}</p>
+		<p class="lead">{% trans %}The project was created from three basic ideas:{% endtrans %}</p>
 		<div class="row">
 			<div class="col-md-4">
 				<h3>{% trans %}Fan page{% endtrans %}</h3>
@@ -60,13 +61,15 @@
 				<dl>
 					<dt><a href="http://getbootstrap.com">Bootstrap</a></dt>
 					<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/twbs/bootstrap/graphs/contributors">contributors</a>,</dd>
-					<dt><a href="http://resumablejs.com/">Resumable.js</a> / <a href="https://twitter.github.io/typeahead.js/">Typeahead.js</a></dt>
-					<dd>by <a href="http://www.23company.com/">23</a> / by <a href="https://twitter.com/">Twitter</a>,</dd>
+					<dt><a href="http://resumablejs.com/">Resumable.js</a></dt>
+					<dd>by <a href="http://www.23company.com/">23</a> (company),</dd>
+					<dt><a href="https://twitter.github.io/typeahead.js/">Typeahead.js</a></dt>
+					<dd>by <a href="https://twitter.com/">Twitter</a>,</dd>
 					<dt><a href="http://www.clonk.de/cr.php?lng={% trans "en" %}">Clonk Rage logo</a></dt>
 					<dd>with <a href="http://www.clonk.de/forum/en/topic_show.pl?pid=11760#pid11760">friendly permission</a> from <a href="http://www.clonk.de/redwolf.php?lng={% trans "en" %}">RedWolfDesign</a>,</dd>
 					<dt><a href="http://git.openclonk.org/openclonk-resources.git/blob/HEAD:/graphics/OpenClonkLogo.xcf">OpenClonk logo</a></dt>
 					<dd>by "<a href="http://forum.openclonk.org/user_info.pl?uid=37">MrBeast</a>" at <a href="http://openclonk.org/">openclonk.org</a>,</dd>
-					<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background)</span></dt>
+					<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background image)</span></dt>
 					<dd>by <a href="http://lukemcdonald.com/">Luke McDonald</a> via <a href="http://subtlepatterns.com/">Subtle Patterns</a>.</dd>
 				</dl>
 			</div>
