--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -75,13 +75,14 @@
 						<hr>
 						<h3>{% trans %}Why should I register?{% endtrans %}</h3>
 						<ul class="list-group">
-							<li class="list-group-item"><span class="glyphicon glyphicon-upload"></span> {% trans %}Publish your own addons{% endtrans %}</li>
+							<li class="list-group-item"><span class="glyphicon glyphicon-upload"></span> {% trans %}Publish your own addons, so they are instantly available to all Clonk players{% endtrans %}</li>
+							<li class="list-group-item"><span class="glyphicon glyphicon-heart-empty"></span> {% trans %}Support Lorry with feedback and help shape the future of the Clonk community{% endtrans %}</li>
 						</ul>
 						<h4>{% trans %}Upcoming features{% endtrans %}</h4>
 						<ul class="list-group">
-							<li class="list-group-item"><span class="glyphicon glyphicon-comment"></span> {% trans %}Comment and discuss addons{% endtrans %}</li>
-							<li class="list-group-item"><span class="glyphicon glyphicon-star-empty"></span> {% trans %}Vote on existing addons{% endtrans %}</li>
-							<li class="list-group-item"><span class="glyphicon glyphicon-tag"></span> {% trans %}Tag addons{% endtrans %}</li>
+							<li class="list-group-item"><span class="glyphicon glyphicon-comment"></span> {% trans %}Comment and discuss addons or send feedback to the developer(s){% endtrans %}</li>
+							<li class="list-group-item"><span class="glyphicon glyphicon-star"></span> {% trans %}Vote on addons to support and highlight the best ones{% endtrans %}</li>
+							<li class="list-group-item"><span class="glyphicon glyphicon-tag"></span> {% trans %}Tag addons and help others to find new favourites{% endtrans %}</li>
 						</ul>
 					{% endif %}
 				</div>
