--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -92,6 +92,7 @@
 {% endblock %}
 
 {% block javascript %}
+	$('#by-openid').removeClass('in');
 	$(document).ready(function() {
 		var options = {placement:'top', trigger:'focus', container: '#form-register'};
 		$('#form-register input').each(function() {
