--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -18,6 +18,7 @@
 		<script>var base = '{{base}}', state = '{{state}}';</script>
 	</head>
 	<body>{% block body %}
+		<noscript><style>.visible-js { display: none; }</style></noscript>
 		{% include 'functions/navbar.twig' %}
 		{% if site_notice and site_enabled %}
 			<div id="site-notice" class="jumbotron alert-{{site_notice_class|default('danger')}}">
