--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
-{% set title = 'Contact us'|trans %}
+{% set title = 'Contact'|trans %}
 
 {% block content %}
 	<div class="page-header">
