--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -7,7 +7,24 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{{base}}">{{brand}}</a>
+			<a class="navbar-brand" href="{{base}}">
+				<svg viewBox="0 0 8 6">
+					<rect x="0" y="0" width="8" height="1" />
+					<rect x="0" y="0" width="1" height="2" />
+					<rect x="7" y="0" width="1" height="2" />
+					<rect x="1" y="2" width="1" height="1" />
+					<rect x="6" y="2" width="1" height="1" />
+					<rect x="2" y="3" width="1" height="1" />
+					<rect x="5" y="3" width="1" height="1" />
+					<rect x="1" y="4" width="1" height="1" />
+					<rect x="3" y="4" width="2" height="1" />
+					<rect x="6" y="4" width="1" height="1" />
+					<rect x="2" y="5" width="1" height="1" />
+					<rect x="5" y="5" width="1" height="1" />
+				</svg>
+				<strong>{{brand}}</strong>
+			</a>
+			<!--<a class="navbar-brand" href="{{base}}"><img src="{{resources}}/lorry/img/lorry-grey.svg" alt="{{brand}}" class="svg" style="height: 1em; display: inline; margin-right: 1px;"> <strong>{{brand}}</strong></a>!-->
 		</div>
 
 		<div class="collapse navbar-collapse main-navbar-collapse">
