add redis and resque-php for job management

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -47,6 +47,10 @@
 					<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
 					<dt><a href="http://twig.sensiolabs.org">Twig</a> / <a href="http://swiftmailer.org/">Swift Mailer</a></dt>
 					<dd>by <a href="http://fabien.potencier.org">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
+					<dt><a href="http://redis.io/">Redis</a></dt>
+					<dd>by <a href="http://invece.org/">Salvatore Sanfilippo</a> and <a href="http://redis.io/topics/sponsors">sponsors</a>,</dd>
+					<dt><a href="https://github.com/resque/resque">Resque</a> via <a href="https://github.com/chrisboulton/php-resque">resque-php</a></dt>
+					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="http://chrisboulton.com/">Chris Boulton</a>,</dd>					
 					<dt><a href="http://lesscss.org/">Less</a></dt>
 					<dd>by <a href="https://github.com/cloudhead">Alexis Sellier</a> and <a href="http://lesscss.org/about/#team">contributors</a>,</dd>
 					<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a> / <a href="http://lesscss.org/">OAuth 2.0 Client</a></dt>
