--- a/app/templates/email/feedback.twig
+++ b/app/templates/email/feedback.twig
@@ -1,6 +1,6 @@
 {% extends 'email/base.twig' %}
 
-{% block subject %}{% trans %}Site feedback for {{brand}}{% endtrans %}{% endblock %}
+{% block subject %}{% trans %}{{brand}}: Site feedback{% endtrans %}{% endblock %}
 
 {% block body %}
 <p>Feedback sent by {{sender}}:</p>
