--- a/app/templates/email/password.twig
+++ b/app/templates/email/password.twig
@@ -1,6 +1,6 @@
 {% extends 'email/base.twig' %}
 
-{% block subject %}{% trans %}Password reset for {{brand}}{% endtrans %}{% endblock %}
+{% block subject %}{% trans %}{{brand}}: Password reset{% endtrans %}{% endblock %}
 
 {% block body %}
 <p>{% trans %}You (or somebody else) requested a password reset for your account.{% endtrans %}</p>
