--- a/app/templates/site/privacy.twig
+++ b/app/templates/site/privacy.twig
@@ -14,7 +14,7 @@
 		<h2>{% trans %}User data{% endtrans %}</h2>
 		<p>{% trans %}We save the following data directly related to your account:{% endtrans %}</p>
 		<ul>
-			<li>{% trans %}<strong>Basic account information</strong> (only username, email address and encrypted password){% endtrans %}</li>	
+			<li>{% trans %}<strong>Basic account information</strong> (username, email address and encrypted password){% endtrans %}</li>	
 			<li>{% trans %}<strong>Settings and profile information</strong> (for example: language, when you registered, and details you submitted on the settings page){% endtrans %}</li>	
 			<li>{% trans %}<strong>Login services</strong> (only if you added a linked account){% endtrans %}</li>
 		</ul>
