--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -3,8 +3,8 @@
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			{% if addons %}<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">{% endif %}
-			<h1>{{title}}{% if not user_login %} <small>&lbrack;<a href="{{base}}/clonk">?</a>&rbrack;</small>{% endif %}</h1>
+			{% if addons %}<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">{% endif %}			
+			<h1>{% if not user_login %}<small class="pull-right"><a href="{{base}}/clonk">&hellip;?</a></small>{% endif %}{{title}}</h1>
 		</div>
 	</div>
 	<div class="container">
@@ -29,7 +29,7 @@
 			<div class="container">
 				<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right jumbo-image hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">
 				<h1>{% trans %}No addons available{% endtrans %}</h1>
-				<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
+				<p>{% trans %}There are no addons for this game yet :-({% endtrans %}</p>
 				{% if user_login %}
 					<p>
 						<a href="{{base}}/create?for={{short}}" class="btn btn-primary btn-lg">{% trans %}New {{game}} addon{% endtrans %}</a>
