various page changes

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -13,21 +13,21 @@
 		<p class="lead">{% trans %}The project was created from three basic ideas:{% endtrans %}</p>
 		<div class="row">
 			<div class="col-md-4">
-				<h3>{% trans %}Fan page{% endtrans %}</h3>
+				<h3 id="fanpage">{% trans %}Fan page{% endtrans %}</h3>
 				<p>{% trans %}We're here as the fans of Clonk. We built this site as members of the community for "our" game.{% endtrans %}</p>
 				<p>{% trans %}This site is for new players to learn all about Clonk, to discover the huge database of addons and to help them get right into the game.{% endtrans %}</p>
 				<p><a href="{{base}}/clonk" class="btn btn-info">{% trans "Learn about Clonk" %}</a></p>
 			</div>
 			<div class="col-md-4">
 				<hr class="visible-xs">
-				<h3>{% trans %}Distribution platform{% endtrans %}</h3>
+				<h3 id="distributionplatform">{% trans %}Distribution platform{% endtrans %}</h3>
 				<p>{% trans %}We want to provide Clonk players with a simple, clean interface to find and download the best addons and keep them up-to-date as they progress.{% endtrans %}</p>
 				<p>{% trans %}It should also serve as an archive, to enable players to go back and find forgotten gems of the past.{% endtrans %}</p>
 				<p><a href="{{base}}/addons" class="btn btn-info">{% trans "Discover the addons" %}</a></p>
 			</div>
 			<div class="col-md-4">
 				<hr class="visible-xs">
-				<h3>{% trans %}Online community{% endtrans %}</h3>
+				<h3 id="onlinecommunity">{% trans %}Online community{% endtrans %}</h3>
 				<p>{% trans %}The official Clonk site is not really up to date anymore and fails to highlight one of the best features of Clonk: the awesome Community and its creations.{% endtrans %}</p>
 				<p>{% trans %}We want to share our own creations easily and give the addon developers our important feedback.{% endtrans %}</p>
 				{% if user_login %}
@@ -41,7 +41,7 @@
 		<p class="lead">{% trans %}This project was only made possible with a number of technologies and free resources:{% endtrans %}</p>
 		<div class="row">
 			<div class="col-md-4">
-				<h3>{% trans "Technologies" %}</h3>
+				<h3 id="technologies">{% trans "Technologies" %}</h3>
 				<dl>
 					<dt><a href="http://php.net">PHP</a></dt>
 					<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
@@ -61,7 +61,7 @@
 			</div>
 			<div class="col-md-4">
 				<hr class="visible-xs">
-				<h3>{% trans "Resources" %}</h3>
+				<h3 id="resources">{% trans "Resources" %}</h3>
 				<dl>
 					<dt><a href="http://getbootstrap.com">Bootstrap</a></dt>
 					<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/twbs/bootstrap/graphs/contributors">contributors</a>,</dd>
@@ -79,7 +79,7 @@
 			</div>
 			<div class="col-md-4">
 				<hr class="visible-xs">
-				<h3>{% trans "People" %}</h3>
+				<h3 id="people">{% trans "People" %}</h3>
 				<dl>
 					<dt><a href="http://clonkspot.org/">{% trans %}Clonkspot community{% endtrans %}</a></dt>
 					<dd>{% trans %}feedback and thoughts{% endtrans %},</dd>
