--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -36,7 +36,7 @@
 						<input type="text" class="form-control" name="github" id="github" value="{{github}}" placeholder="{{github_placeholder}}">
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-default">{% trans "Save links" %}</button>
+						<button type="submit" class="btn btn-default">{% trans "Change links" %}</button>
 					</div>
 				</form>
 			</div>
