--- a/app/templates/email/welcome.twig
+++ b/app/templates/email/welcome.twig
@@ -5,10 +5,10 @@
 {% block body %}
 <p>{% trans %}Welcome to {{brand}}!{% endtrans %}</p>
 
-<p>{% trans %}Although this project is still very early in the development, thank you for helping us test the platform.{% endtrans %}<br>
+<p>{% trans %}Although this project is still in development, thank you for helping us test the platform.{% endtrans %}<br>
 {% trans %}If you'd like to learn more about the project or Clonk visit the about pages at the bottom of the site.{% endtrans %}</p>
 
-<p>{% trans %}You can report any feedback you have on the contact page at {{contact}}. If you're logged in, we'll be able to see who it's from and get back to you.{% endtrans %}</p>
+<p>{% trans %}You can report any feedback you have on the contact page at {{contact}}. Let's make {{brand}} something awesome.{% endtrans %}</p>
 
 <p>{% trans %}Once again, thank you for testing {{brand}}!{% endtrans %}</p>
 
