--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -23,8 +23,18 @@ a.text {
 	color: inherit;
 }
 
+.carousel svg {
+	width: 100%;
+}
+
 .carousel-caption h3 {
-	font-size: 1.2em;
+	font-weight: bold;
+}
+
+.carousel-caption {
+	background-color: @navbar-inverse-bg;
+	padding-top: 0px;
+	box-shadow: 0px 0px 50px rgb(0,0,0) inset;
 }
 
 .popover {
@@ -132,6 +142,10 @@ dt {
 	margin-top: 8px;
 }
 
+.dl-horizontal dt, dt:first-child {
+	margin-top: 0px;
+}
+
 .media-heading {
 	display: inline-block;
 }
@@ -185,7 +199,7 @@ label.btn {
 	margin-top: -1px;
 }
 
-h1 a, h1 a:hover, h1 a:active {
+h1 a, h1 a:hover, h1 a:active, .lead a, .lead a:hover, .lead a:active {
 	color: inherit;
 	text-decoration: none;
 }
@@ -262,7 +276,6 @@ h1 a.btn {
 		margin-top: 0px;
 	}
 }
-
 
 @import 'typeahead.less';
 
