--- a/app/templates/email/activate.twig
+++ b/app/templates/email/activate.twig
@@ -5,7 +5,7 @@
 {% set url = '<a href="' ~ url ~ '">' ~ url ~ '</a>' %}
 
 {% block body %}
-<p>{% trans %}You requested your email address to be changed to {{email}}.{% endtrans %}</p>
+<p>{% trans %}You set your email address to {{email}}.{% endtrans %}</p>
 
 <p>{% trans %}To use all features of {{brand}} you need to activate this new address.{% endtrans %}<br>
 {% trans %}Please open {{url}} to activate your address.{% endtrans %}</p>
