--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -23,7 +23,7 @@ a.text {
 	color: inherit;
 }
 
-.carousel svg {
+/*.carousel svg {
 	width: 100%;
 }
 
@@ -35,7 +35,7 @@ a.text {
 	background-color: @navbar-inverse-bg;
 	padding-top: 0px;
 	box-shadow: 0px 0px 50px rgb(0,0,0) inset;
-}
+}*/
 
 .popover {
 	width: 280px;
