add timestamp to approval page

--- a/app/templates/manage/approve.twig
+++ b/app/templates/manage/approve.twig
@@ -52,6 +52,8 @@
 					<dd>{{namespace}}</dd>
 					<dt>{% trans %}Example url{% endtrans %}</dt>
 					<dd><samp>&hellip;/addons/{{game.short}}/<strong>{{namespace}}</strong></samp></dd>
+					<dt>{% trans %}Timestamp{% endtrans %}</dt>
+					<dd>{{timestamp}}</dd>
 				</dl>
 			</div>
 		</div>
